methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:13: error: not found: value k
    k= false
    ^SlugTracking:15: error: not found: value k
  return k
         ^