methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (!estFaceMur){
    avance()
  	var k =false
  	if (getCouleurSol()==Color.green){
    	k=true
  		} else {
    		k=false
  		}
    recule()
  }else{
    k= false
  }
  return k
  
}